<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:rowCount="4"
        android:columnCount="1"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2sp"
            android:gravity="center"
            android:text="@string/saludo"
            android:textColor="#79CCD6"
            android:textSize="30sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5sp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="#79CCD6"

            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/signout"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:backgroundTint="#00BCD4"
            android:gravity="left"
            android:text="@string/signout"
            android:textSize="10sp"
            android:textStyle="italic" />

        <ImageButton

            android:id="@+id/btn_task"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5sp"
            android:background="#ffffff"

            app:srcCompat="@drawable/_486504338_check_check_marks_list_checklist_documents_todo_list_81298" />

        <ImageButton
            android:id="@+id/btn_contact"
            android:layout_height="102dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5sp"
            android:background="#ffffff"

            app:srcCompat="@drawable/blue_users_customers_clients_people_12438" />

        <ImageButton
            android:id="@+id/btn_dibujo"
            android:layout_height="104dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5sp"
            android:background="#ffffff"

            app:srcCompat="@drawable/dibujo" />

        <ImageButton
            android:id="@+id/calendar"
            android:layout_height="113dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="5sp"
            android:background="#ffffff"
            android:text="button2"
            android:textSize="18sp"

            app:srcCompat="@drawable/calendarlist_1032" />




    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>